some more changes

--- a/paper/trac2020.bib
+++ b/paper/trac2020.bib
@@ -1,96 +1,36 @@
-@inproceedings{offenseval,
-author = {Zampieri, Marcos and Malmasi, Shervin and Nakov, Preslav and Rosenthal, Sara and Farra, Noura and Kumar, Ritesh},
-booktitle = {Proc. 13th Int. Work. Semant. Eval.},
-title = {{SemEval-2019 Task 6: Identifying and Categorizing Offensive Language in Social Media (OffensEval)}},
-year = {2019}
+@article{Aroyehun,
+abstract = {With the advent of the read-write web which facilitates social interactions in online spaces, the rise of antisocial behaviour in online spaces has attracted the attention of researchers. In this paper, we address the challenge of automatically identifying aggression in social media posts. Our team, saroyehun, participated in the English track of the Aggression Detection in Social Media Shared Task. On this task, we investigate the efficacy of deep neural network models of varying complexity. Our results reveal that deep neural network models require more data points to do better than an NBSVM linear baseline based on character n-grams. Our improved deep neural network models were trained on augmented data and pseudo labeled examples. Our LSTM classifier receives a weighted macro-F1 score of 0.6425 to rank first overall on the Facebook sub-task of the shared task. On the social media sub-task, our CNN-LSTM model records a weighted macro-F1 score of 0.5920 to place third overall.},
+author = {Aroyehun, Segun Taofeek and Gelbukh, Alexander},
+file = {:home/denis/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Aroyehun, Trolling, 2018 - Unknown - Aggression detection in social media Using deep neural networks, data augmentation, and pseudo labe.pdf:pdf},
+journal = {Proc. First Work. Trolling, Aggress. Cyberbullying},
+pages = {90--97},
+title = {{Aggression Detection in Social Media: Using Deep Neural Networks, Data Augmentation, and Pseudo Labeling}},
+url = {https://www.aclweb.org/anthology/W18-4411.pdf www.gelbukh.com},
+year = {2018}
+}
+@inproceedings{gordeev2016,
+abstract = {In this article we study verbal expression of aggression and its detection using machine learning and neural networks methods. We test our results using our corpora of messages from anonymous imageboards. We also compare Random forest classifier with convolutional neural network for “Movie reviews with one sentence per review” corpus.},
+archivePrefix = {arXiv},
+arxivId = {1604.06650},
+author = {Gordeev, Denis},
+booktitle = {Lect. Notes Comput. Sci. (including Subser. Lect. Notes Artif. Intell. Lect. Notes Bioinformatics)},
+doi = {10.1007/978-3-319-43958-7_28},
+eprint = {1604.06650},
+file = {:home/denis/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Gordeev - 2016 - Detecting state of aggression in sentences using cnn.pdf:pdf},
+isbn = {9783319439570},
+issn = {16113349},
+keywords = {CNN,Imageboards,Random forest,Sentiment analysis,Verbal aggression,Word2vec},
+pages = {240--245},
+title = {{Detecting state of aggression in sentences using cnn}},
+url = {https://link.springer.com/chapter/10.1007/978-3-319-43958-7{\_}28},
+volume = {9811 LNCS},
+year = {2016}
 }
 @inproceedings{OLID,
 author = {Zampieri, Marcos and Malmasi, Shervin and Nakov, Preslav and Rosenthal, Sara and Farra, Noura and Kumar, Ritesh},
 booktitle = {Proc. NAACL},
 title = {{Predicting the Type and Target of Offensive Posts in Social Media}},
 year = {2019}
-}
-@inproceedings{trac2018report,
-address = {Santa Fe, USA},
-author = {Kumar, Ritesh and Ojha, Atul Kr. and Malmasi, Shervin and Zampieri, Marcos},
-booktitle = {Proc. First Work. Trolling, Aggress. Cyberbulling},
-title = {{Benchmarking Aggression Identification in Social Media}},
-year = {2018}
-}
-@inproceedings{davidson2017automated,
-author = {Davidson, Thomas and Warmsley, Dana and Macy, Michael and Weber, Ingmar},
-booktitle = {Proc. ICWSM},
-title = {{Automated Hate Speech Detection and the Problem of Offensive Language}},
-year = {2017}
-}
-@inproceedings{dinakar2011modeling,
-author = {Dinakar, Karthik and Reichart, Roi and Lieberman, Henry},
-booktitle = {Soc. Mob. Web},
-pages = {11--17},
-title = {{Modeling the detection of Textual Cyberbullying}},
-year = {2011}
-}
-@inproceedings{xu2012learning,
-author = {Xu, Jun-Ming and Jun, Kwang-Sung and Zhu, Xiaojin and Bellmore, Amy},
-booktitle = {Proc. 2012 Conf. North Am. chapter Assoc. Comput. Linguist. Hum. Lang. Technol.},
-organization = {Association for Computational Linguistics},
-pages = {656--666},
-title = {{Learning from bullying traces in social media}},
-year = {2012}
-}
-@incollection{dadvar2013improving,
-author = {Dadvar, Maral and Trieschnigg, Dolf and Ordelman, Roeland and de Jong, Franciska},
-booktitle = {Adv. Inf. Retr.},
-pages = {693--696},
-publisher = {Springer},
-title = {{Improving cyberbullying detection with user context}},
-year = {2013}
-}
-@inproceedings{kwok2013locate,
-author = {Kwok, Irene and Wang, Yuzhou},
-booktitle = {Twenty-Seventh AAAI Conf. Artif. Intell.},
-title = {{Locate the hate: Detecting Tweets Against Blacks}},
-year = {2013}
-}
-@article{burnap2015cyber,
-author = {Burnap, Pete and Williams, Matthew L},
-journal = {Policy {\&} Internet},
-number = {2},
-pages = {223--242},
-publisher = {Wiley Online Library},
-title = {{Cyber hate speech on twitter: An application of machine classification and statistical modeling for policy and decision making}},
-volume = {7},
-year = {2015}
-}
-@inproceedings{djuric2015hate,
-author = {Djuric, Nemanja and Zhou, Jing and Morris, Robin and Grbovic, Mihajlo and Radosavljevic, Vladan and Bhamidipati, Narayan},
-booktitle = {Proc. 24th Int. Conf. World Wide Web Companion},
-organization = {International World Wide Web Conferences Steering Committee},
-pages = {29--30},
-title = {{Hate speech detection with comment embeddings}},
-year = {2015}
-}
-@inproceedings{tulkens2016dictionary,
-address = {Portoroz, Slovenia},
-author = {Tulkens, St{\'{e}}phan and Hilte, Lisa and Lodewyckx, Elise and Verhoeven, Ben and Daelemans, Walter},
-booktitle = {Proc. Work. Text Anal. Cybersecurity Online Saf.},
-title = {{A Dictionary-based Approach to Racism Detection in Dutch Social Media}},
-year = {2016}
-}
-@inproceedings{ross2016measuring,
-address = {Bochum, Germany},
-author = {Ross, Bj{\"{o}}rn and Rist, Michael and Carbonell, Guillermo and Cabrera, Benjamin and Kurowsky, Nils and Wojatzki, Michael},
-booktitle = {Proc. Work. Nat. Lang. Process. Comput. Commun.},
-title = {{Measuring the Reliability of Hate Speech Annotations: The Case of the European Refugee Crisis}},
-year = {2016}
-}
-@inproceedings{nobata2016abusive,
-author = {Nobata, Chikashi and Tetreault, Joel and Thomas, Achint and Mehdad, Yashar and Chang, Yi},
-booktitle = {Proc. 25th Int. Conf. World Wide Web},
-organization = {International World Wide Web Conferences Steering Committee},
-pages = {145--153},
-title = {{Abusive Language Detection in Online User Content}},
-year = {2016}
 }
 @inproceedings{schmidt2017survey,
 address = {Valencia, Spain},
@@ -100,21 +40,31 @@ pages = {1--10},
 title = {{A Survey on Hate Speech Detection Using Natural Language Processing}},
 year = {2017}
 }
-@article{schofield2017identifying,
-author = {Schofield, Alexandra and Davidson, Thomas},
-journal = {XRDS Crossroads, ACM Mag. Students},
-number = {2},
-pages = {56--59},
-publisher = {ACM},
-title = {{Identifying Hate Speech in Social Media}},
-volume = {24},
+@inproceedings{kwok2013locate,
+author = {Kwok, Irene and Wang, Yuzhou},
+booktitle = {Twenty-Seventh AAAI Conf. Artif. Intell.},
+title = {{Locate the hate: Detecting Tweets Against Blacks}},
+year = {2013}
+}
+@inproceedings{xu2012learning,
+author = {Xu, Jun-Ming and Jun, Kwang-Sung and Zhu, Xiaojin and Bellmore, Amy},
+booktitle = {Proc. 2012 Conf. North Am. chapter Assoc. Comput. Linguist. Hum. Lang. Technol.},
+organization = {Association for Computational Linguistics},
+pages = {656--666},
+title = {{Learning from bullying traces in social media}},
+year = {2012}
+}
+@inproceedings{su2017,
+address = {Vancouver, Canada},
+author = {Su, Huei-Po and Huang, Chen-Jie and Chang, Hao-Tsung and Lin, Chuan-Jie},
+booktitle = {Proc. Work. Work. Abus. Lang. Online},
+title = {{Rephrasing Profanity in Chinese Text}},
 year = {2017}
 }
-@inproceedings{mubarak2017,
-address = {Vancouver, Canada},
-author = {Mubarak, Hamdy and Kareem, Darwish and Walid, Magdy},
-booktitle = {Proc. Work. Abus. Lang. Online},
-title = {{Abusive Language Detection on Arabic Social Media}},
+@inproceedings{waseem2017understanding,
+author = {Waseem, Zeerak and Davidson, Thomas and Warmsley, Dana and Weber, Ingmar},
+booktitle = {Proc. First Work. Abus. Langauge Online},
+title = {{Understanding Abuse: A Typology of Abusive Language Detection Subtasks}},
 year = {2017}
 }
 @inproceedings{fiser2017,
@@ -124,13 +74,6 @@ booktitle = {Proc. Work. Work. Abus. Lang. Online},
 title = {{Legal Framework, Dataset and Annotation Schema for Socially Unacceptable On-line Discourse Practices in Slovene}},
 year = {2017}
 }
-@inproceedings{su2017,
-address = {Vancouver, Canada},
-author = {Su, Huei-Po and Huang, Chen-Jie and Chang, Hao-Tsung and Lin, Chuan-Jie},
-booktitle = {Proc. Work. Work. Abus. Lang. Online},
-title = {{Rephrasing Profanity in Chinese Text}},
-year = {2017}
-}
 @inproceedings{malmasi2017detecting,
 author = {Malmasi, Shervin and Zampieri, Marcos},
 booktitle = {Proc. Int. Conf. Recent Adv. Nat. Lang. Process.},
@@ -138,25 +81,27 @@ pages = {467--472},
 title = {{Detecting Hate Speech in Social Media}},
 year = {2017}
 }
-@inproceedings{gamback2017using,
-author = {Gamb{\"{a}}ck, Bj{\"{o}}rn and Sikdar, Utpal Kumar},
-booktitle = {Proc. First Work. Abus. Lang. Online},
-pages = {85--90},
-title = {{Using Convolutional Neural Networks to Classify Hate-speech}},
-year = {2017}
+@incollection{dadvar2013improving,
+author = {Dadvar, Maral and Trieschnigg, Dolf and Ordelman, Roeland and de Jong, Franciska},
+booktitle = {Adv. Inf. Retr.},
+pages = {693--696},
+publisher = {Springer},
+title = {{Improving cyberbullying detection with user context}},
+year = {2013}
 }
-@inproceedings{waseem2017understanding,
-author = {Waseem, Zeerak and Davidson, Thomas and Warmsley, Dana and Weber, Ingmar},
-booktitle = {Proc. First Work. Abus. Langauge Online},
-title = {{Understanding Abuse: A Typology of Abusive Language Detection Subtasks}},
-year = {2017}
+@inproceedings{djuric2015hate,
+author = {Djuric, Nemanja and Zhou, Jing and Morris, Robin and Grbovic, Mihajlo and Radosavljevic, Vladan and Bhamidipati, Narayan},
+booktitle = {Proc. 24th Int. Conf. World Wide Web Companion},
+organization = {International World Wide Web Conferences Steering Committee},
+pages = {29--30},
+title = {{Hate speech detection with comment embeddings}},
+year = {2015}
 }
-@inproceedings{zhang2018detecting,
-author = {Zhang, Ziqi and Robinson, David and Tepper, Jonathan},
-booktitle = {Lect. Notes Comput. Sci.},
-organization = {Springer Verlag},
-title = {{Detecting Hate Speech on Twitter Using a Convolution-GRU Based Deep Neural Network}},
-year = {2018}
+@inproceedings{offenseval,
+author = {Zampieri, Marcos and Malmasi, Shervin and Nakov, Preslav and Rosenthal, Sara and Farra, Noura and Kumar, Ritesh},
+booktitle = {Proc. 13th Int. Work. Semant. Eval.},
+title = {{SemEval-2019 Task 6: Identifying and Categorizing Offensive Language in Social Media (OffensEval)}},
+year = {2019}
 }
 @article{malmasi2018challenges,
 author = {Malmasi, Shervin and Zampieri, Marcos},
@@ -174,6 +119,47 @@ journal = {arXiv Prepr. arXiv1802.00393},
 title = {{Large Scale Crowdsourcing and Characterization of Twitter Abusive Behavior}},
 year = {2018}
 }
+@inproceedings{wiegand2018overview,
+author = {Wiegand, Michael and Siegel, Melanie and Ruppenhofer, Josef},
+booktitle = {Proc. GermEval},
+title = {{Overview of the GermEval 2018 Shared Task on the Identification of Offensive Language}},
+year = {2018}
+}
+@article{burnap2015cyber,
+author = {Burnap, Pete and Williams, Matthew L},
+journal = {Policy {\&} Internet},
+number = {2},
+pages = {223--242},
+publisher = {Wiley Online Library},
+title = {{Cyber hate speech on twitter: An application of machine classification and statistical modeling for policy and decision making}},
+volume = {7},
+year = {2015}
+}
+@article{schofield2017identifying,
+author = {Schofield, Alexandra and Davidson, Thomas},
+journal = {XRDS Crossroads, ACM Mag. Students},
+number = {2},
+pages = {56--59},
+publisher = {ACM},
+title = {{Identifying Hate Speech in Social Media}},
+volume = {24},
+year = {2017}
+}
+@inproceedings{nobata2016abusive,
+author = {Nobata, Chikashi and Tetreault, Joel and Thomas, Achint and Mehdad, Yashar and Chang, Yi},
+booktitle = {Proc. 25th Int. Conf. World Wide Web},
+organization = {International World Wide Web Conferences Steering Committee},
+pages = {145--153},
+title = {{Abusive Language Detection in Online User Content}},
+year = {2016}
+}
+@inproceedings{gamback2017using,
+author = {Gamb{\"{a}}ck, Bj{\"{o}}rn and Sikdar, Utpal Kumar},
+booktitle = {Proc. First Work. Abus. Lang. Online},
+pages = {85--90},
+title = {{Using Convolutional Neural Networks to Classify Hate-speech}},
+year = {2017}
+}
 @article{fortuna2018survey,
 author = {Fortuna, Paula and Nunes, S{\'{e}}rgio},
 journal = {ACM Comput. Surv.},
@@ -184,17 +170,59 @@ title = {{A Survey on Automatic Detection of Hate Speech in Text}},
 volume = {51},
 year = {2018}
 }
+@inproceedings{mubarak2017,
+address = {Vancouver, Canada},
+author = {Mubarak, Hamdy and Kareem, Darwish and Walid, Magdy},
+booktitle = {Proc. Work. Abus. Lang. Online},
+title = {{Abusive Language Detection on Arabic Social Media}},
+year = {2017}
+}
 @article{elsherief2018hate,
 author = {ElSherief, Mai and Kulkarni, Vivek and Nguyen, Dana and Wang, William Yang and Belding, Elizabeth},
 journal = {arXiv Prepr. arXiv1804.04257},
 title = {{Hate Lingo: A Target-based Linguistic Analysis of Hate Speech in Social Media}},
 year = {2018}
 }
-@inproceedings{wiegand2018overview,
-author = {Wiegand, Michael and Siegel, Melanie and Ruppenhofer, Josef},
-booktitle = {Proc. GermEval},
-title = {{Overview of the GermEval 2018 Shared Task on the Identification of Offensive Language}},
+@inproceedings{trac2018report,
+address = {Santa Fe, USA},
+author = {Kumar, Ritesh and Ojha, Atul Kr. and Malmasi, Shervin and Zampieri, Marcos},
+booktitle = {Proc. First Work. Trolling, Aggress. Cyberbulling},
+title = {{Benchmarking Aggression Identification in Social Media}},
 year = {2018}
+}
+@inproceedings{zhang2018detecting,
+author = {Zhang, Ziqi and Robinson, David and Tepper, Jonathan},
+booktitle = {Lect. Notes Comput. Sci.},
+organization = {Springer Verlag},
+title = {{Detecting Hate Speech on Twitter Using a Convolution-GRU Based Deep Neural Network}},
+year = {2018}
+}
+@inproceedings{dinakar2011modeling,
+author = {Dinakar, Karthik and Reichart, Roi and Lieberman, Henry},
+booktitle = {Soc. Mob. Web},
+pages = {11--17},
+title = {{Modeling the detection of Textual Cyberbullying}},
+year = {2011}
+}
+@inproceedings{ross2016measuring,
+address = {Bochum, Germany},
+author = {Ross, Bj{\"{o}}rn and Rist, Michael and Carbonell, Guillermo and Cabrera, Benjamin and Kurowsky, Nils and Wojatzki, Michael},
+booktitle = {Proc. Work. Nat. Lang. Process. Comput. Commun.},
+title = {{Measuring the Reliability of Hate Speech Annotations: The Case of the European Refugee Crisis}},
+year = {2016}
+}
+@inproceedings{davidson2017automated,
+author = {Davidson, Thomas and Warmsley, Dana and Macy, Michael and Weber, Ingmar},
+booktitle = {Proc. ICWSM},
+title = {{Automated Hate Speech Detection and the Problem of Offensive Language}},
+year = {2017}
+}
+@inproceedings{tulkens2016dictionary,
+address = {Portoroz, Slovenia},
+author = {Tulkens, St{\'{e}}phan and Hilte, Lisa and Lodewyckx, Elise and Verhoeven, Ben and Daelemans, Walter},
+booktitle = {Proc. Work. Text Anal. Cybersecurity Online Saf.},
+title = {{A Dictionary-based Approach to Racism Detection in Dutch Social Media}},
+year = {2016}
 }
 @article{Wolf2019HuggingFacesTS,
 author = {Wolf, Thomas and Debut, Lysandre and Sanh, Victor and Chaumond, Julien and Delangue, Clement and Moi, Anthony and Cistac, Pierric and Rault, Tim and Louf, R'emi and Funtowicz, Morgan and Brew, Jamie},
@@ -586,16 +614,6 @@ title = {{AI-KU: Using Substitute Vectors and Co-Occurrence Modeling For Word Se
 url = {http://aclweb.org/anthology/S13-2050},
 year = {2013}
 }
-@inproceedings{K15-1026,
-author = {Schwartz, Roy and Reichart, Roi and Rappoport, Ari},
-booktitle = {Proc. Ninet. Conf. Comput. Nat. Lang. Learn.},
-doi = {10.18653/v1/K15-1026},
-pages = {258--267},
-publisher = {Association for Computational Linguistics},
-title = {{Symmetric Pattern Based Word Embeddings for Improved Word Similarity Prediction}},
-url = {http://aclweb.org/anthology/K15-1026},
-year = {2015}
-}
 @inproceedings{Kawahara:14,
 address = {Baltimore, MD, USA},
 author = {Kawahara, Daisuke and Peterson, Daniel W and Palmer, Martha},
@@ -606,6 +624,16 @@ series = {ACL{\~{}}2014},
 title = {{A Step-wise Usage-based Method for Inducing Polysemy-aware Verb Classes}},
 url = {https://aclweb.org/anthology/P14-1097},
 year = {2014}
+}
+@inproceedings{K15-1026,
+author = {Schwartz, Roy and Reichart, Roi and Rappoport, Ari},
+booktitle = {Proc. Ninet. Conf. Comput. Nat. Lang. Learn.},
+doi = {10.18653/v1/K15-1026},
+pages = {258--267},
+publisher = {Association for Computational Linguistics},
+title = {{Symmetric Pattern Based Word Embeddings for Improved Word Similarity Prediction}},
+url = {http://aclweb.org/anthology/K15-1026},
+year = {2015}
 }
 @inproceedings{S13-2049,
 author = {Jurgens, David and Klapaftis, Ioannis},
@@ -632,6 +660,34 @@ publisher = {Curran Associates, Inc.},
 title = {{Attention is {\{}All{\}} you {\{}Need{\}}}},
 url = {http://papers.nips.cc/paper/7181-attention-is-all-you-need.pdf},
 year = {2017}
+}
+@article{fasttext,
+abstract = {This paper explores a simple and efficient baseline for text classification. Our experiments show that our fast text classifier fastText is often on par with deep learning classifiers in terms of accuracy, and many orders of magnitude faster for training and evaluation. We can train fastText on more than one billion words in less than ten minutes using a standard multicore{\~{}}CPU, and classify half a million sentences among{\~{}}312K classes in less than a minute.},
+archivePrefix = {arXiv},
+arxivId = {1607.01759},
+author = {Joulin, Armand and Grave, Edouard and Bojanowski, Piotr and Mikolov, Tomas},
+eprint = {1607.01759},
+file = {:home/denis/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Joulin et al. - 2016 - Bag of Tricks for Efficient Text Classification(2).pdf:pdf},
+month = {jul},
+title = {{Bag of Tricks for Efficient Text Classification}},
+url = {http://arxiv.org/abs/1607.01759},
+year = {2016}
+}
+@inproceedings{word2vec,
+abstract = {We propose two novel model architectures for computing continuous vector representations of words from very large data sets. The quality of these representations is measured in a word similarity task, and the results are compared to the previously best performing techniques based on different types of neural networks. We observe large improvements in accuracy at much lower computational cost, i.e. it takes less than a day to learn high quality word vectors from a 1.6 billion words data set. Furthermore, we show that these vectors provide state-of-the-art performance on our test set for measuring syntactic and semantic word similarities.},
+archivePrefix = {arXiv},
+arxivId = {1301.3781},
+author = {Mikolov, Tomas and Chen, Kai and Corrado, Greg and Dean, Jeffrey},
+booktitle = {Proc. Int. Conf. Learn. Represent. (ICLR 2013)},
+eprint = {1301.3781},
+file = {:home/denis/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Mikolov et al. - Unknown - Vector Space.pdf:pdf},
+keywords = {specom-17},
+mendeley-tags = {specom-17},
+month = {jan},
+pages = {1--12},
+title = {{Efficient estimation of word representations in vector space}},
+url = {http://arxiv.org/abs/1301.3781},
+year = {2013}
 }
 @inproceedings{Hearst1992,
 abstract = {We describe a method for the automatic acquisition of the hyponymy lexical relation from unrestricted text. Two goals motivate the approach: (i) avoidance of the need for pre-encoded knowledge and (ii) applicability across a wide range of text. We identify a set of lexico-syntactic patterns that are easily recognizable, that occur frequently and across text genre boundaries, and that indisputably indicate the lexical relation of interest. We describe a method for discovering these patterns and suggest that other lexical relations will also be acquirable in this way. A subset of the acquisition algorithm is implemented and the results are used to augment and critique the structure of a large hand-built thesaurus. Extensions and applications to areas such as information retrieval are suggested.},
